✨ feat: 예외처리 및 RsData 추가 (#11)
* ✨ feat: GlobalExceptionHandler 관련 패키지 구현, RsData 추가

* ♻️ refactor: 패키지 구조 변경 및 클래스 경로 수정

* ✨ feat: PaymentDomainException 추가 및 예외 처리 로직 개선

* ✨ feat: PaymentController 및 PaymentQueryController에서 RsData를 사용하여 응답 형식 개선

* ✨ feat: 새로운 예외 코드 및 메시지 추가, PaymentApplicationException 및 PaymentSagaException 구현

* ✨ feat: TossPaymentClientImpl 예외 처리 로직 추가

* ✨ feat: 애플리케이션 계층 예외 처리 로직 추가

* ✨ feat: Saga 관련 예외처리 추가

* ✨ feat: 메시지 설정 포맷 변경